test/negative/106_empty_match.fx
// expect: case
val x = match 1 {}
println(x)
